Added plugin to build a Windows executable